# catkin_ws

./: .gitignore  README.md
imu_crash/: CMakeLists.txt  package.xml
imu_crash/src/: #imu_crash.cpp#  imu_crash._nvocpp.cpp  imu_crash.cpp  imu_crash_ancien.cpp
ir_sensors/: CMakeLists.txt  package.xml
ir_sensors/launch/: calib.launch  publish.launch
ir_sensors/msg/: RangeArray.msg
ir_sensors/python/: ir_calibration.py  ir_publish.py
ir_sensors/yaml/: calib_params.yaml  ir_setup.yaml
launch/: Milestone_Integration.launch  camera.launch  explore.launch  fetch.launch  milestone0.launch  milestone1.launch  milestone1_path.launch  milestone1_wall.launch  milestone3.launch  package.xml  record_small.launch  rostopic_hz.sh  testPathFollower.launch
launch/yaml/: robot_properties.yaml
localization/: CMakeLists.txt  package.xml
localization/launch/: localize.launch  odometry.launch
localization/src/: MonteCarlo.cpp  OdometryModel.cpp  RangeModel.cpp  mcl_node.cpp  (+1 more)
logic/: CMakeLists.txt  package.xml
map_tools/: CMakeLists.txt  package.xml
motion_controllers/: CMakeLists.txt  CMakeLists.txt~  package.xml
path_planning/: CMakeLists.txt  package.xml
plane_extraction/: CMakeLists.txt  CMakeLists.txt~  package.xml
ras_maze_map/: CMakeLists.txt  README.md
ras_maze_map/maps/: sample_map.txt  small_maze.txt  small_maze_simulation.txt
ras_maze_map/src/: maze_map_node.cpp
ras_vision/: CMakeList.txt
robot_actionlib/: CMakeLists.txt  package.xml
static_tf/: CMakeLists.txt  package.xml
wall_follower/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+104 files in other folders)
